# ls-cs

./: .astylerc  .gitignore  Basis_Doctrina_License.txt  BdString-notes.txt  CMakeLists.txt  LsCs-Deb-build-dependencies.sh  LsCs-Deb-build-dependencies.sh_bad  LsCs-Fedora-build-dependencies.sh  LsCs-Manjaro-build-dependencies.sh  LsCs-RPM-build-dependencies.sh  LsCs-library.conf.in  LsCs.spec.in  README.md  astyle-project.bat  astyle-project.sh  build-LsCs-Fedora-rpm.sh  build-LsCs-deb.sh  build-LsCs-local.sh  build-LsCs-rpm.sh  build-LsCs-windows.bat  build-ls-cs-deb.sh  build-ls-cs-rpm.sh  changelog  cmake-install-notes.txt  cmake-windows-10-notes.txt  copperspice.spec.in  description.txt  get-apostrophe.sh  glfw-text-notes.txt  install-autotools.sh  install-editors.sh  install-fedora-postgresql.sh  install-vcpkg.sh  install-vdpau.sh  kitware-archive.sh  libtool-configure.ac  linux.cmake  local-build.sh  ls-cs-Deb-build-dependencies.sh  ls-cs-Manjaro-build-dependencies.sh  (+18 more)
examples/console-hello/src/: CMakeLists.txt  console-hello_build_info.h.in  main.cpp
examples/cups-3x-dialog/src/: CMakeLists.txt  bdcupsspoolerdevice.cpp  bdcupsspoolerdevice.h  bdpostscriptspooler.h  bdsinglefilejob.cpp  bdsinglefilejob.h  bdsinglefilejobdialog.cpp  bdsinglefilejobdialog.h  bdspooler.cpp  bdspooler.h  bdspoolerdevice.cpp  mainwindow.cpp  mainwindow.h  myeditwidget.cpp  printing.cmake  qpagelayout.h  qpagesize.cpp
examples/cups-experiment/src/: CMakeLists.txt  main.cpp  main.cpp~
examples/gui-hello/: CMakeLists.txt  gui-hello.qrc
examples/gui-hello/src/: CMakeLists.txt  gui-hello_build_info.h.in  main.cpp  mainwindow.cpp  mainwindow.h
examples/text-edit-with-print/: CMakeLists.txt
examples/text-edit-with-print/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  myeditwidget.h  printerselectiondialog.cpp  printerselectiondialog.h
src/core/: CMakeLists.txt
src/core/animation/: animation.cmake  qabstractanimation.cpp  qabstractanimation.h  qabstractanimation_p.h  qanimationdriver.h  qanimationgroup.cpp  qanimationgroup.h  qanimationgroup_p.h  qparallelanimationgroup.cpp  qparallelanimationgroup.h  qparallelanimationgroup_p.h  qpauseanimation.cpp  qpauseanimation.h  qpropertyanimation.cpp  qpropertyanimation.h  qpropertyanimation_p.h  qsequentialanimationgroup.cpp  qsequentialanimationgroup.h  qsequentialanimationgroup_p.h  qvariantanimation.cpp  qvariantanimation.h  qvariantanimation_p.h
src/core/codecs/: codecs.cmake  qfontlaocodec.cpp  qfontlaocodec_p.h  qiconvcodec.cpp  qiconvcodec_p.h  qisciicodec.cpp  qisciicodec_p.h  qlatincodec.cpp  qlatincodec_p.h  qsimplecodec.cpp  qsimplecodec_p.h  qtextcodec.cpp  qtextcodec.h  qtextcodec_p.h  qtextcodecfactoryinterface.h  qtextcodecplugin.cpp  qtextcodecplugin.h  qtextencoder.h  qutfcodec.cpp  qutfcodec_p.h
src/core/concurrent/: concurrent.cmake  qfuture.h  qfutureinterface.cpp  qfutureinterface.h  qfutureinterface_p.h  qfutureinterfacebase.h  qfuturesynchronizer.h  qfuturewatcher.cpp  qfuturewatcher.h  qfuturewatcher_p.h  qfuturewatcherbase.h  qmutablefutureiterator.h  qrunnable.h  qtconcurrentcompilertest.h  qtconcurrentexception.cpp  qtconcurrentexception.h  qtconcurrentfilter.h  qtconcurrentfilterkernel.h  qtconcurrentfunctionwrappers.h  qtconcurrentiteratekernel.cpp  qtconcurrentiteratekernel.h  qtconcurrentmap.h  qtconcurrentmapkernel.h  qtconcurrentmedian.h  qtconcurrentreducekernel.h  qtconcurrentresultstore.cpp  qtconcurrentresultstore.h  qtconcurrentrun.h  qtconcurrentrunbase.h  qtconcurrentstoredfunctioncall.h  qtconcurrentthreadengine.cpp  qtconcurrentthreadengine.h  qthreadpool.cpp  qthreadpool.h  qthreadpool_p.h
src/core/containers/: containers.cmake  qcache.h  qcontiguouscache.cpp  qcontiguouscache.h  qflatmap.h  qhash.cpp  qhash.h  qhashfunc.h  qhashfwd.h  qhashiterator.h  qlinkedlist.h  qlist.h  qlistiterator.h  qmap.h  qmapfunc.h  qmultihash.h  qmultimap.h  qmutablelinkedlistiterator.h  qqueue.h  qset.h  qstack.cpp  qstack.h  qstringlist.cpp  qstringlist.h  qvector.h
src/core/datetime/: datetime.cmake  qdatetime.cpp  qdatetime.h  qdatetime_mac.mm  qdatetime_p.h  qdatetimeparser.cpp  qdatetimeparser_p.h  qtime.h  qtimezone.cpp  qtimezone.h  qtimezone_data_p.h  qtimezone_p.h  qtimezone_unix.cpp  qtimezone_win.cpp
src/core/global/: Info.plist.app  LsCs_build_info.h.in  global.cmake  ls-cs_build_info.h.in  lscs_windows.h  qassert.cpp  qassert.h  qendian.h  qexport.cpp  qexport.h  qfeatures.h  qglobal.cpp  qglobal.h  qglobal_debug.h  qlibraryinfo.cpp  qlibraryinfo.h  qlog.cpp  qlog.h  qmalloc.cpp  qnamespace.cpp  qnamespace.h  qnumeric.cpp  qnumeric.h  qnumeric_p.h  qplatformdefs.h  qplatformposix.h  qt_windows.h  qtcore.h
src/core/io/: forkfd_qt.cpp  io.cmake  lscsioutils.cpp  lscsioutils.h  qabstractfileengine.cpp  qabstractfileengine.h  qabstractfileengine_p.h  qbuffer.cpp  qbuffer.h  qdatastream.cpp  qdatastream.h  qdatastream_p.h  qdataurl.cpp  qdataurl_p.h  qdebug.cpp  qdebug.h  qdebug_p.h  qdir.cpp  qdir.h  qdir_p.h  qdiriterator.cpp  qdiriterator.h  qfile.cpp  qfile.h  qfile_p.h  qfiledevice.cpp  qfiledevice.h  qfiledevice_p.h  qfileinfo.cpp  qfileinfo.h  qfileinfo_p.h  qfilesystemengine.cpp  (+84 more)
src/declarative/: CMakeLists.txt
src/multimedia/: CMakeLists.txt
src/network/: CMakeLists.txt
src/scripttools/: CMakeLists.txt
src/sql/: CMakeLists.txt
src/svg/: CMakeLists.txt  qgraphicssvgitem.cpp  qgraphicssvgitem.h  qsvgfont.cpp  qsvgfont_p.h  qsvggenerator.cpp  qsvggenerator.h  qsvggraphics.cpp  qsvggraphics_p.h  qsvghandler.cpp  qsvghandler_p.h  qsvgnode.cpp  qsvgnode_p.h  qsvgrenderer.cpp  qsvgrenderer.h  qsvgstructure.cpp  qsvgstructure_p.h  qsvgstyle.cpp  qsvgstyle_p.h  qsvgtinydocument.cpp  qsvgtinydocument_p.h  qsvgwidget.cpp  qsvgwidget.h  qtsvg.h
src/vulkan/: CMakeLists.txt  qvulkan_device_functions.cpp  qvulkan_device_functions.h  qvulkan_functions.cpp  qvulkan_functions.h  qvulkan_instance.cpp  qvulkan_instance.h  qvulkan_window.cpp  qvulkan_window.h  qvulkan_window_renderer.h
src/xml/: CMakeLists.txt
src/xmlpatterns/: CMakeLists.txt
utilities/unicode/: CMakeLists.txt
(+3897 files in other folders)
